--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
@@ -22,6 +23,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
+    "split-pane-react": "^0.1.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
