--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.6.2",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-terminal": "^1.4.4",
     "react-toastify": "^9.1.3",
     "split-pane-react": "^0.1.3",
     "uuid": "^9.0.1"
