--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@nivo/core": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "prettier": "^3.1.1",
