--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
-    "@nivo/core": "^0.84.0",
-    "@nivo/pie": "^0.84.0",
+    "@mui/material": "^5.15.17",
+    "@mui/x-data-grid": "^7.4.0",
+    "@nivo/bar": "^0.87.0",
+    "@nivo/core": "^0.87.0",
+    "@nivo/pie": "^0.87.0",
+    "@nivo/radar": "^0.86.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "prettier": "^3.1.1",
